--- a/Slife/Slife/app/src/main/AndroidManifest.xml
+++ b/Slife/Slife/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
+    <service android:enabled="true" android:name=".PlayerService" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
